PROFILE-BUGS: - Fix main navigation bugs - Add toast when success accept/reject order - Fix profile data and wrong viewmodel - Fix other ui bugs
Signed-off-by: syntialai <53588149+syntialai@users.noreply.github.com>

--- a/tailor-app/src/main/res/values/strings.xml
+++ b/tailor-app/src/main/res/values/strings.xml
@@ -23,6 +23,8 @@
     <string name="rejected_label">Rejected</string>
     <string name="accepted_label">Accepted</string>
     <string name="all_label">All</string>
+    <string name="order_accepted">Order accepted.</string>
+    <string name="order_rejected">Order rejected.</string>
 
     <!-- Order Detail -->
     <string name="order_id_label">Order ID</string>
