PROFILE-BUGS: Implement validate text input ontextchanged, move static string to resources
Signed-off-by: syntialai <53588149+syntialai@users.noreply.github.com>

--- a/features/tailormade_design_detail/src/main/res/values/strings.xml
+++ b/features/tailormade_design_detail/src/main/res/values/strings.xml
@@ -18,6 +18,7 @@
     <string name="size_design_information_label">Size Design Information</string>
     <string name="color_design_information_label">Color Design Information</string>
     <string name="add_design_label">Add Design</string>
+    <string name="edit_design_label">Edit Design</string>
     <string name="add_color_label">Add Color</string>
     <string name="description_design_information_label">Description Design Information</string>
     <string name="design_description_label">Description</string>
@@ -25,6 +26,22 @@
     <string name="detail_label">Detail</string>
     <string name="cm_label">cm</string>
 
+    <!-- Error message -->
+    <string name="design_name_is_empty">Design name is empty.</string>
+    <string name="design_price_is_empty">Design price is empty.</string>
+    <string name="design_discount_is_empty">Design discount is empty.</string>
+    <string name="design_discount_invalid">Design discount can\'t be higher than the normal price.</string>
+    <string name="design_description_is_empty">Design description is empty.</string>
+    <string name="color_name_is_empty">Color name is empty.</string>
+    <string name="size_name_is_empty">Size name is empty.</string>
+    <string name="chest_size_is_empty">Chest size is empty.</string>
+    <string name="waist_size_is_empty">Waist size is empty.</string>
+    <string name="hips_size_is_empty">Hips size is empty.</string>
+    <string name="neck_to_waist_size_is_empty">Neck to Waist size is empty.</string>
+    <string name="inseam_size_is_empty">Inseam size is empty.</string>
+
+
+    <!-- Success message -->
     <string name="design_added">Design added.</string>
     <string name="design_updated">Design updated.</string>
     <string name="design_added_to_cart">Design successfully added to cart.</string>
