--- a/libraries/tailormade_dls/src/main/res/values/strings.xml
+++ b/libraries/tailormade_dls/src/main/res/values/strings.xml
@@ -8,14 +8,14 @@
     <string name="design_name_label">Design name</string>
     <string name="design_price_label">Design price</string>
     <string name="chat_name_label">Chat Name</string>
-    <string name="chat_content_label">Chat content</string>
+    <string name="chat_content_label">Chat contentssssssssssssssss        aaaaaaaaaaaaaaa aaaaaaaaaaaaaaa</string>
     <string name="chat_time_label">Chat time</string>
     <string name="notification_type_label">Notification Type</string>
     <string name="notification_time_label">Notification time</string>
     <string name="notification_title_label">Notification title</string>
     <string name="notification_content_label">Notification content</string>
     <string name="chat_content_send_time_label">08:49</string>
-    <string name="chat_content_reply_time_label">Chat reply time</string>
+    <string name="chat_content_reply_time_label">08:48</string>
     <string name="order_title_label">Order title</string>
     <string name="order_price_label">Order price</string>
     <string name="order_price_discount_label">Order price discount</string>
