FIX_FACE_SWAP: - Move face swap dynamic to app module - Add missing file - Fix library dlib and opencv - Fix bitmap converter = Add skeleton for face swap
Signed-off-by: syntialai <53588149+syntialai@users.noreply.github.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,9 @@
 
     <!-- Swap face -->
     <string name="title_tailormade_face_swap">Face Swap</string>
+    <string name="swapping_face">Swapping face…</string>
+    <string name="download_completed">Download completed.</string>
+    <string name="share_image">Share image</string>
 
     <!-- Dashboard -->
     <string name="dashboard_title_state">Hello!</string>
