TAILOR_APP_UNIT_TEST: Fix face swap
Signed-off-by: syntialai <53588149+syntialai@users.noreply.github.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,8 @@
     <string name="swapping_face">Swapping face…</string>
     <string name="download_completed">Download completed.</string>
     <string name="share_image">Share image</string>
+    <string name="detect_image_face_message">Failed to detect face from %s.</string>
+    <string name="error_detecting_image_failed_message">Something\'s wrong while detecting face from %s.</string>
 
     <!-- Dashboard -->
     <string name="dashboard_title_state">Hello!</string>
